--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "flvworker",
+  "name": "simpstream",
   "version": "1.0.0",
   "description": "吉伊视频 - FLV播放器",
   "scripts": {
-    "dev": "wrangler pages dev ./public",
-    "deploy": "wrangler pages deploy ./public"
+    "dev": "wrangler pages dev --compatibility-date=2024-01-01",
+    "deploy": "wrangler pages deploy ."
   },
   "dependencies": {
     "flv.js": "^1.6.2"
   },
   "devDependencies": {
-    "wrangler": "^3.0.0"
+    "wrangler": "^3.22.1"
   }
 }
