--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,8 +1,16 @@
-name = "flvworker"
+name = "simpstream"
 main = "worker.js"
-compatibility_date = "2023-01-01"
+compatibility_date = "2024-01-01"
 
-[vars]
-# These values will be replaced with actual values in the Cloudflare dashboard
-AUTH_PASSWORD = "your-secure-password"
-JWT_SECRET = "your-jwt-secret"
+[site]
+bucket = "./public"
+
+[build]
+command = ""
+upload.format = "directory"
+
+[env.production]
+vars = { AUTH_PASSWORD = "your-secure-password" }
+
+[env.preview]
+vars = { AUTH_PASSWORD = "your-secure-password" }
