--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,16 +1,5 @@
 name = "simpstream"
-main = "worker.js"
 compatibility_date = "2024-01-01"
 
-[site]
-bucket = "./public"
-
-[build]
-command = ""
-upload.format = "directory"
-
-[env.production]
-vars = { AUTH_PASSWORD = "your-secure-password" }
-
-[env.preview]
-vars = { AUTH_PASSWORD = "your-secure-password" }
+[vars]
+AUTH_PASSWORD = "your-secure-password"
